; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/cache/extr_inval.c_CallSyscacheCallbacks.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/cache/extr_inval.c_CallSyscacheCallbacks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.SYSCACHECALLBACK = type { i32, i32, i32, i32 (i32, i32, i32)* }

@SysCacheSize = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"invalid cache ID: %d\00", align 1
@syscache_callback_links = common dso_local global i32* null, align 8
@syscache_callback_list = common dso_local global %struct.SYSCACHECALLBACK* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CallSyscacheCallbacks(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.SYSCACHECALLBACK*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %13, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @SysCacheSize, align 4
  %12 = icmp sge i32 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %9, %2
  %14 = load i32, i32* @ERROR, align 4
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @elog(i32 %14, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %15)
  br label %17

17:                                               ; preds = %13, %9
  %18 = load i32*, i32** @syscache_callback_links, align 8
  %19 = load i32, i32* %3, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i32, i32* %18, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = sub nsw i32 %22, 1
  store i32 %23, i32* %5, align 4
  br label %24

24:                                               ; preds = %27, %17
  %25 = load i32, i32* %5, align 4
  %26 = icmp sge i32 %25, 0
  br i1 %26, label %27, label %52

27:                                               ; preds = %24
  %28 = load %struct.SYSCACHECALLBACK*, %struct.SYSCACHECALLBACK** @syscache_callback_list, align 8
  %29 = load i32, i32* %5, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds %struct.SYSCACHECALLBACK, %struct.SYSCACHECALLBACK* %28, i64 %30
  store %struct.SYSCACHECALLBACK* %31, %struct.SYSCACHECALLBACK** %6, align 8
  %32 = load %struct.SYSCACHECALLBACK*, %struct.SYSCACHECALLBACK** %6, align 8
  %33 = getelementptr inbounds %struct.SYSCACHECALLBACK, %struct.SYSCACHECALLBACK* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = load i32, i32* %3, align 4
  %36 = icmp eq i32 %34, %35
  %37 = zext i1 %36 to i32
  %38 = call i32 @Assert(i32 %37)
  %39 = load %struct.SYSCACHECALLBACK*, %struct.SYSCACHECALLBACK** %6, align 8
  %40 = getelementptr inbounds %struct.SYSCACHECALLBACK, %struct.SYSCACHECALLBACK* %39, i32 0, i32 3
  %41 = load i32 (i32, i32, i32)*, i32 (i32, i32, i32)** %40, align 8
  %42 = load %struct.SYSCACHECALLBACK*, %struct.SYSCACHECALLBACK** %6, align 8
  %43 = getelementptr inbounds %struct.SYSCACHECALLBACK, %struct.SYSCACHECALLBACK* %42, i32 0, i32 2
  %44 = load i32, i32* %43, align 8
  %45 = load i32, i32* %3, align 4
  %46 = load i32, i32* %4, align 4
  %47 = call i32 %41(i32 %44, i32 %45, i32 %46)
  %48 = load %struct.SYSCACHECALLBACK*, %struct.SYSCACHECALLBACK** %6, align 8
  %49 = getelementptr inbounds %struct.SYSCACHECALLBACK, %struct.SYSCACHECALLBACK* %48, i32 0, i32 1
  %50 = load i32, i32* %49, align 4
  %51 = sub nsw i32 %50, 1
  store i32 %51, i32* %5, align 4
  br label %24

52:                                               ; preds = %24
  ret void
}

declare dso_local i32 @elog(i32, i8*, i32) #1

declare dso_local i32 @Assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
